[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "surveymonkey-mcp"
version = "0.1.0"
description = "MCP server for the SurveyMonkey API"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[project.scripts]
surveymonkey-mcp = "surveymonkey.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/surveymonkey"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
